<resources>
    <string name="app_name">Task Master</string>
    <string name="imageView">Just an Image</string>
    <string name="allBtn">All Tasks</string>
    <string name="addBtn">Add Task</string>
    <string name="myTasks">My Tasks</string>
    <string name="taskTitle">Task Title</string>
    <string name="taskDescription">Task Description</string>
    <string name="myTask">My Task</string>
    <string name="doSomething">Do Something</string>
    <string name="totalTasks">Total tasks: 0</string>
    <string name="textview">TextView</string>
    <string name="task_details">Task Details</string>
    <string name="task_details_2">Task Details 2</string>
    <string name="task_details_3">Task Details 3</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
</resources>